#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([1.68])
AC_INIT([gingko_serv,gingko_clnt,gingko_test_clnt], [3.14], [blog.auxten.com])
AC_CONFIG_SRCDIR([config.h.in])
AM_CONFIG_HEADER([config.h])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([gingko_serv,gingko_clnt,gingko_test_clnt],3.14)

##########################################################################
# debug compilation support
##########################################################################

AC_MSG_CHECKING([whether to build with debug information])
AC_ARG_ENABLE([debug],
    [AS_HELP_STRING([--enable-debug],
        [enable debug data generation (def=no)])],
    [debugit="$enableval"],
    [debugit=no])
AC_MSG_RESULT([$debugit])

if test x"$debugit" = x"yes"; then
    AC_DEFINE([DEBUG],[],[Debug Mode])
    AM_CXXFLAGS="-ggdb -Wall -Wno-uninitialized -O0"
else
    AC_DEFINE([NDEBUG],[],[No-debug Mode])
    AM_CXXFLAGS="$AM_CXXFLAGS -ggdb -O2"
fi

AC_SUBST([AM_CXXFLAGS])
##########################################################################

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.
AC_SEARCH_LIBS([pthread_rwlock_init], [pthread])
AC_SEARCH_LIBS([clock_gettime], [rt])
AC_PROG_RANLIB

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_MODE_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_FORK
AC_CHECK_FUNCS([gethostbyname memset select socket strerror gettimeofday inet_ntoa])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
